@@ -67,6 +67,11 @@
             
             <h2><a name="News"></a>News</h2>
 
+            <p><i><b>Apr 8th, 2019: SDCC 3.9.0 RC1 released.</b></i></p>
+            <p>SDCC 3.9.0 Release Candidate 1 source, doc and binary packages for amd64 GNU/Linux, 32 and 64 bit Windows and amd64 macOS are available in corresponding folders at:
+              <a href="http://sourceforge.net/projects/sdcc/files/">
+              http://sourceforge.net/projects/sdcc/files/</a>.</p>
+
             <p><i><b>Sep 27th, 2018: SDCC 3.8.0  released.</b></i></p>
             <p>A new release of SDCC, the portable optimizing compiler for 8051, DS390, Z80, Z180, Rabbit 2000, GBZ80, TLCS-90,
               HC08, STM8 and PIC microprocessors is now available
